# bRAInZ

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose-mcp.yaml  docker-compose-tailscale-mcp.yaml  docker-compose-tailscale.yaml  docker-compose.yaml
backend/: api.py  auth.py  config.py  git_fetcher.py  models.py  pipeline.py  pyproject.toml  requirements.txt  utils.py
backend/classifier/: classify.py
backend/cli/: __init__.py  add_url.py  deps.py  import_bookmarks.py  import_images.py  import_pdfs.py  import_urls.py  query.py  reindex.py  search.py  stats.py
backend/importers/: bookmarks.py  image_bulk.py  pdf_bulk.py
backend/ingestion/: dates.py  image.py  pdf.py  text.py  url.py
backend/llm/: anthropic_provider.py  google_provider.py  ollama.py  openai_provider.py  router.py
backend/rag/: chunker.py  digest.py  embedder.py  planner.py  query.py  search.py  skills.py
backend/rssfeeds/: fetcher.py  opml.py  store.py
backend/storage/: failures.py  filesystem.py  index.py
backend/tools/: fetcher.py  store.py
chrome-extension/: content.js  manifest.json  options.html  options.js  popup.html  popup.js
data/: categories.yaml  config.default.yaml  config.yaml  tags.yaml  taxonomy.yaml
docs/: Classification.md  SYSTEM.md  api-reference.md  cli.md  iphone-shortcut-setup.md  mcp.md
mcp/: Dockerfile  README.md  requirements.txt  server.py
tests/: conftest.py  docker-compose.yaml  test_api.py  test_auth.py  test_classifier.py  test_cli.py  test_ingestion.py  test_ingestion_dates.py  test_ingestion_url.py  test_pipeline.py  (+4 more)
(+10 files in other folders)
