[project]
name = "brainz"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "python-multipart>=0.0.9",
    "trafilatura>=1.12",
    "beautifulsoup4>=4.12",
    "pymupdf>=1.24",
    "numpy>=1.26",
    "pydantic>=2.7",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40", "voyageai>=0.3"]
openai = ["openai>=1.50"]
all = ["brainz[anthropic,openai]"]

[project.scripts]
brainz = "cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]
